login finish code

--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
         <input type="search" placeholder="search here..." id="search-box" />
         <label for="search-box" class="fas fa-search"></label>
       </form>
+
+      <form action="" class="login-form">
+        <h3>login form</h3>
+        <input type="email" placeholder="enter your email" id="" />
+        <input type="password" placeholder="enter your password" id="" />
+        <div class="flex">
+          <input type="checkbox" id="remember-me" />
+          <label for="remember-me">remember me</label>
+          <a href="#">forgot password</a>
+        </div>
+        <input type="submit" value="login now" class="btn" />
+        <p>don't have an account <a href="#">create one!</a></p>
+      </form>
     </header>
 
     <!-- /HEADER SECTION -->
