--- a/index.html
+++ b/index.html
@@ -67,6 +67,46 @@
       </form>
     </header>
 
+    <div class="contact-info">
+      <div id="close-contact-info" class="fas fa-times"></div>
+
+      <div class="info">
+        <i class="fas fa-phone"></i>
+        <h3>phone number</h3>
+        <p>+99891-677-10-30</p>
+        <p>+99894-060-20-47</p>
+      </div>
+
+      <div class="info">
+        <i class="fas fa-envelope"></i>
+        <h3>email address</h3>
+        <p>odiljonovabdulxoliq11@gmail.com</p>
+        <p>odiljonovabdulxoliq1@gmail.com</p>
+      </div>
+
+      <div class="info">
+        <i class="fas fa-map-marker-alt"></i>
+        <h3>office address</h3>
+        <p>fergana,uzbekistan</p>
+      </div>
+
+      <div class="share">
+        <a
+          href="https://www.facebook.com/abdulholiq.odiljonov.1"
+          class="fab fa-facebook"
+        ></a>
+        <a
+          href="https://www.instagram.com/abdulxoliq_1030/?hl=en"
+          class="fab fa-instagram"
+        ></a>
+        <a href="https://t.me/abdulxoliq_odiljonov" class="fab fa-telegram"></a>
+        <a
+          href="https://www.linkedin.com/in/abdulxoliq-odiljonov-a46b49221/"
+          class="fab fa-linkedin"
+        ></a>
+      </div>
+    </div>
+
     <!-- /HEADER SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
