home section finish code

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     />
 
     <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
-    />
+    rel="stylesheet"
+    href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+  />
+  
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="./styles/style.css" />
@@ -109,10 +110,64 @@
 
     <!-- /HEADER SECTION -->
 
+    <!-- HOME SECTION -->
+
+    <section class="home" id="home">
+      <div class=" swiper home-slider">
+         
+        <div class="swiper-wrapper">
+          <section
+            class=" swiper-slide slide"
+            style="background: url(images/home-slide-1.jpg) no-repeat"
+          >
+            <div class="content">
+              <h3>we provide best service</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                tempore doloremque placeat, officiis maiores accusamus!
+              </p>
+              <a href="#about" class="btn">get started</a>
+            </div>
+          </section>
+
+          <section
+            class=" swiper-slide slide"
+            style="background: url(images/home-slide-2.jpg) no-repeat"
+          >
+            <div class="content">
+              <h3>making dream come to life</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                tempore doloremque placeat, officiis maiores accusamus!
+              </p>
+              <a href="#about" class="btn">get started</a>
+            </div>
+          </section>
+
+          <section
+            class=" swiper-slide slide"
+            style="background: url(images/home-slide-3.jpg) no-repeat"
+          >
+            <div class="content">
+              <h3>from concept to creation</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                tempore doloremque placeat, officiis maiores accusamus!
+              </p>
+              <a href="#about" class="btn">get started</a>
+            </div>
+          </section>
+        </div>
+         <div class="swiper-button-next"></div>
+         <div class="swiper-button-prev"></div>
+      </div>
+    </section>
+
+    <!-- /HOME SECTION -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <!-- custom js file link  -->
     <script src="./js/script.js"></script>
 
