--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     />
 
     <link
-    rel="stylesheet"
-    href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-  />
-  
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="./styles/style.css" />
@@ -113,11 +112,10 @@
     <!-- HOME SECTION -->
 
     <section class="home" id="home">
-      <div class=" swiper home-slider">
-         
+      <div class="swiper home-slider">
         <div class="swiper-wrapper">
           <section
-            class=" swiper-slide slide"
+            class="swiper-slide slide"
             style="background: url(images/home-slide-1.jpg) no-repeat"
           >
             <div class="content">
@@ -131,7 +129,7 @@
           </section>
 
           <section
-            class=" swiper-slide slide"
+            class="swiper-slide slide"
             style="background: url(images/home-slide-2.jpg) no-repeat"
           >
             <div class="content">
@@ -145,7 +143,7 @@
           </section>
 
           <section
-            class=" swiper-slide slide"
+            class="swiper-slide slide"
             style="background: url(images/home-slide-3.jpg) no-repeat"
           >
             <div class="content">
@@ -158,12 +156,58 @@
             </div>
           </section>
         </div>
-         <div class="swiper-button-next"></div>
-         <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
       </div>
     </section>
 
     <!-- /HOME SECTION -->
+
+    <!-- ABOUT SECTION -->
+
+    <section class="about" id="about">
+      <h1 class="heading">about us</h1>
+
+      <div class="row">
+        <div class="video">
+          <video src="./images/about-vid.mp4" loop muted autoplay></video>
+        </div>
+
+        <div class="content">
+          <h3>We will provide you the best work which you dream for!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad illum at
+            animi eum, nam qui molestias eveniet culpa maxime ducimus.
+          </p>
+          <a href="#services" class="btn">read more</a>
+        </div>
+      </div>
+
+      <div class="box-container">
+        <div class="box">
+          <h3>2+</h3>
+          <p>years of experience</p>
+        </div>
+
+        <div class="box">
+         <h3>250+</h3>
+         <p>project completed</p>
+       </div>
+
+       <div class="box">
+         <h3>50+</h3>
+         <p>satiesfied clients</p>
+       </div>
+
+       <div class="box">
+         <h3>20+</h3>
+         <p>active workers</p>
+       </div>
+
+      </div>
+    </section>
+
+    <!-- /ABOUT SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
