--- a/index.html
+++ b/index.html
@@ -190,24 +190,104 @@
         </div>
 
         <div class="box">
-         <h3>250+</h3>
-         <p>project completed</p>
-       </div>
+          <h3>250+</h3>
+          <p>project completed</p>
+        </div>
 
-       <div class="box">
-         <h3>50+</h3>
-         <p>satiesfied clients</p>
-       </div>
+        <div class="box">
+          <h3>50+</h3>
+          <p>satiesfied clients</p>
+        </div>
 
-       <div class="box">
-         <h3>20+</h3>
-         <p>active workers</p>
-       </div>
-
+        <div class="box">
+          <h3>20+</h3>
+          <p>active workers</p>
+        </div>
       </div>
     </section>
 
     <!-- /ABOUT SECTION -->
+
+    <!-- SERVICES SECTION -->
+
+    <section class="services" id="services">
+      <h1 class="heading">our services</h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="./images/service-1.png" alt="" />
+          <h3>building construction</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-2.png" alt="" />
+          <h3>house renovation</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-3.png" alt="" />
+          <h3>architecture design</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-4.png" alt="" />
+          <h3>material supply</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-5.png" alt="" />
+          <h3>construction consultant</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-6.png" alt="" />
+          <h3>interior design</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-7.png" alt="" />
+          <h3>building maintenance</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="./images/service-8.png" alt="" />
+          <h3>building renovation</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium, cupiditate.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- /SERVICES SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
