--- a/index.html
+++ b/index.html
@@ -289,6 +289,94 @@
 
     <!-- /SERVICES SECTION -->
 
+    <!-- PROJECT SECTION -->
+
+    <section class="projects" id="projects">
+      <h1 class="heading">our projects</h1>
+      <div class="box-container">
+        <a href="images/project-1.jpg" class="box">
+          <div class="image">
+            <img src="./images/project-1.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="info">
+              <h3>dream home</h3>
+              <p>construction,design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/project-3.jpg" class="box">
+         <div class="image">
+           <img src="./images/project-3.jpg" alt="" />
+         </div>
+         <div class="content">
+           <div class="info">
+             <h3>dream home</h3>
+             <p>construction,design</p>
+           </div>
+           <i class="fas fa-plus"></i>
+         </div>
+       </a>
+
+       <a href="images/project-3.jpg" class="box">
+         <div class="image">
+           <img src="./images/project-3.jpg" alt="" />
+         </div>
+         <div class="content">
+           <div class="info">
+             <h3>dream home</h3>
+             <p>construction,design</p>
+           </div>
+           <i class="fas fa-plus"></i>
+         </div>
+       </a>
+
+
+       <a href="images/project-4.jpg" class="box">
+         <div class="image">
+           <img src="./images/project-4.jpg" alt="" />
+         </div>
+         <div class="content">
+           <div class="info">
+             <h3>dream home</h3>
+             <p>construction,design</p>
+           </div>
+           <i class="fas fa-plus"></i>
+         </div>
+       </a>
+
+       <a href="images/project-5.jpg" class="box">
+         <div class="image">
+           <img src="./images/project-5.jpg" alt="" />
+         </div>
+         <div class="content">
+           <div class="info">
+             <h3>dream home</h3>
+             <p>construction,design</p>
+           </div>
+           <i class="fas fa-plus"></i>
+         </div>
+       </a>
+
+       <a href="images/project-6.jpg" class="box">
+         <div class="image">
+           <img src="./images/project-6.jpg" alt="" />
+         </div>
+         <div class="content">
+           <div class="info">
+             <h3>dream home</h3>
+             <p>construction,design</p>
+           </div>
+           <i class="fas fa-plus"></i>
+         </div>
+       </a>
+      </div>
+    </section>
+
+    <!-- /PROJECT SECTION -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
