--- a/index.html
+++ b/index.html
@@ -308,74 +308,216 @@
         </a>
 
         <a href="images/project-3.jpg" class="box">
-         <div class="image">
-           <img src="./images/project-3.jpg" alt="" />
-         </div>
-         <div class="content">
-           <div class="info">
-             <h3>dream home</h3>
-             <p>construction,design</p>
-           </div>
-           <i class="fas fa-plus"></i>
-         </div>
-       </a>
+          <div class="image">
+            <img src="./images/project-3.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="info">
+              <h3>dream home</h3>
+              <p>construction,design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
 
-       <a href="images/project-3.jpg" class="box">
-         <div class="image">
-           <img src="./images/project-3.jpg" alt="" />
-         </div>
-         <div class="content">
-           <div class="info">
-             <h3>dream home</h3>
-             <p>construction,design</p>
-           </div>
-           <i class="fas fa-plus"></i>
-         </div>
-       </a>
+        <a href="images/project-3.jpg" class="box">
+          <div class="image">
+            <img src="./images/project-3.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="info">
+              <h3>dream home</h3>
+              <p>construction,design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
 
+        <a href="images/project-4.jpg" class="box">
+          <div class="image">
+            <img src="./images/project-4.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="info">
+              <h3>dream home</h3>
+              <p>construction,design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
 
-       <a href="images/project-4.jpg" class="box">
-         <div class="image">
-           <img src="./images/project-4.jpg" alt="" />
-         </div>
-         <div class="content">
-           <div class="info">
-             <h3>dream home</h3>
-             <p>construction,design</p>
-           </div>
-           <i class="fas fa-plus"></i>
-         </div>
-       </a>
+        <a href="images/project-5.jpg" class="box">
+          <div class="image">
+            <img src="./images/project-5.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="info">
+              <h3>dream home</h3>
+              <p>construction,design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
 
-       <a href="images/project-5.jpg" class="box">
-         <div class="image">
-           <img src="./images/project-5.jpg" alt="" />
-         </div>
-         <div class="content">
-           <div class="info">
-             <h3>dream home</h3>
-             <p>construction,design</p>
-           </div>
-           <i class="fas fa-plus"></i>
-         </div>
-       </a>
-
-       <a href="images/project-6.jpg" class="box">
-         <div class="image">
-           <img src="./images/project-6.jpg" alt="" />
-         </div>
-         <div class="content">
-           <div class="info">
-             <h3>dream home</h3>
-             <p>construction,design</p>
-           </div>
-           <i class="fas fa-plus"></i>
-         </div>
-       </a>
+        <a href="images/project-6.jpg" class="box">
+          <div class="image">
+            <img src="./images/project-6.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="info">
+              <h3>dream home</h3>
+              <p>construction,design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
       </div>
     </section>
 
     <!-- /PROJECT SECTION -->
+
+    <!-- REVIEWS SECTION -->
+    <section class="reviews" id="reviews">
+      <div class="heading">clients reviews</div>
+
+      <div class=" swiper reviews-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laboriosam repudiandae culpa fuga odit veritatis incidunt
+              repellendus odio debitis minus! Quas a ipsam illo earum
+              accusantium qui consequatur facilis dignissimos libero.
+            </p>
+            <div class="user">
+              <img src="images/pic-1.png" alt="" />
+              <div class="info">
+                <h3>john doe</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laboriosam repudiandae culpa fuga odit veritatis incidunt
+              repellendus odio debitis minus! Quas a ipsam illo earum
+              accusantium qui consequatur facilis dignissimos libero.
+            </p>
+            <div class="user">
+              <img src="images/pic-2.png" alt="" />
+              <div class="info">
+                <h3>john doe</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laboriosam repudiandae culpa fuga odit veritatis incidunt
+              repellendus odio debitis minus! Quas a ipsam illo earum
+              accusantium qui consequatur facilis dignissimos libero.
+            </p>
+            <div class="user">
+              <img src="images/pic-3.png" alt="" />
+              <div class="info">
+                <h3>john doe</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laboriosam repudiandae culpa fuga odit veritatis incidunt
+              repellendus odio debitis minus! Quas a ipsam illo earum
+              accusantium qui consequatur facilis dignissimos libero.
+            </p>
+            <div class="user">
+              <img src="images/pic-4.png" alt="" />
+              <div class="info">
+                <h3>john doe</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laboriosam repudiandae culpa fuga odit veritatis incidunt
+              repellendus odio debitis minus! Quas a ipsam illo earum
+              accusantium qui consequatur facilis dignissimos libero.
+            </p>
+            <div class="user">
+              <img src="images/pic-5.png" alt="" />
+              <div class="info">
+                <h3>john doe</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laboriosam repudiandae culpa fuga odit veritatis incidunt
+              repellendus odio debitis minus! Quas a ipsam illo earum
+              accusantium qui consequatur facilis dignissimos libero.
+            </p>
+            <div class="user">
+              <img src="images/pic-6.png" alt="" />
+              <div class="info">
+                <h3>john doe</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- /REVIEWS SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
