--- a/index.html
+++ b/index.html
@@ -519,6 +519,70 @@
 
     <!-- /REVIEWS SECTION -->
 
+
+
+    <!-- PRICING SECTION -->
+
+    <section class="pricing" id="pricing">
+       <h1 class="heading">our pricing</h1>
+
+
+       <div class="box-container">
+        
+         <div class="box">
+             <i class="fas fa-home"></i>
+             <h3>basic plane</h3>
+             <div class="price"><span>$</span>250</div>
+             <div class="list">
+                <p>interior design</p>
+                <p>refurbishment</p>
+                <p>material supply</p>
+                <p>maintenance</p>
+                <p>24/7 support</p>
+             </div>
+             <a href="#" class="btn">choose plan</a>
+          </div>
+
+          <div class="box">
+            <i class="fas fa-building"></i>
+            <h3>premium plane</h3>
+            <div class="price"><span>$</span>650</div>
+            <div class="list">
+               <p>interior design</p>
+               <p>refurbishment</p>
+               <p>material supply</p>
+               <p>maintenance</p>
+               <p>24/7 support</p>
+            </div>
+            <a href="#" class="btn">choose plan</a>
+         </div>
+
+
+         <div class="box">
+            <i class="fas fa-city"></i>
+            <h3>ultimate plane</h3>
+            <div class="price"><span>$</span>1200</div>
+            <div class="list">
+               <p>interior design</p>
+               <p>refurbishment</p>
+               <p>material supply</p>
+               <p>maintenance</p>
+               <p>24/7 support</p>
+            </div>
+            <a href="#" class="btn">choose plan</a>
+         </div>
+
+
+       </div>
+    </section>
+
+
+
+
+
+    <!-- /PRICING SECTION -->
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
