contact section complete

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     <section class="reviews" id="reviews">
       <div class="heading">clients reviews</div>
 
-      <div class=" swiper reviews-slider">
+      <div class="swiper reviews-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide">
             <p>
@@ -519,69 +519,80 @@
 
     <!-- /REVIEWS SECTION -->
 
-
-
     <!-- PRICING SECTION -->
 
     <section class="pricing" id="pricing">
-       <h1 class="heading">our pricing</h1>
+      <h1 class="heading">our pricing</h1>
 
-
-       <div class="box-container">
-        
-         <div class="box">
-             <i class="fas fa-home"></i>
-             <h3>basic plane</h3>
-             <div class="price"><span>$</span>250</div>
-             <div class="list">
-                <p>interior design</p>
-                <p>refurbishment</p>
-                <p>material supply</p>
-                <p>maintenance</p>
-                <p>24/7 support</p>
-             </div>
-             <a href="#" class="btn">choose plan</a>
+      <div class="box-container">
+        <div class="box">
+          <i class="fas fa-home"></i>
+          <h3>basic plane</h3>
+          <div class="price"><span>$</span>250</div>
+          <div class="list">
+            <p>interior design</p>
+            <p>refurbishment</p>
+            <p>material supply</p>
+            <p>maintenance</p>
+            <p>24/7 support</p>
           </div>
+          <a href="#" class="btn">choose plan</a>
+        </div>
 
-          <div class="box">
-            <i class="fas fa-building"></i>
-            <h3>premium plane</h3>
-            <div class="price"><span>$</span>650</div>
-            <div class="list">
-               <p>interior design</p>
-               <p>refurbishment</p>
-               <p>material supply</p>
-               <p>maintenance</p>
-               <p>24/7 support</p>
-            </div>
-            <a href="#" class="btn">choose plan</a>
-         </div>
+        <div class="box">
+          <i class="fas fa-building"></i>
+          <h3>premium plane</h3>
+          <div class="price"><span>$</span>650</div>
+          <div class="list">
+            <p>interior design</p>
+            <p>refurbishment</p>
+            <p>material supply</p>
+            <p>maintenance</p>
+            <p>24/7 support</p>
+          </div>
+          <a href="#" class="btn">choose plan</a>
+        </div>
 
-
-         <div class="box">
-            <i class="fas fa-city"></i>
-            <h3>ultimate plane</h3>
-            <div class="price"><span>$</span>1200</div>
-            <div class="list">
-               <p>interior design</p>
-               <p>refurbishment</p>
-               <p>material supply</p>
-               <p>maintenance</p>
-               <p>24/7 support</p>
-            </div>
-            <a href="#" class="btn">choose plan</a>
-         </div>
-
-
-       </div>
+        <div class="box">
+          <i class="fas fa-city"></i>
+          <h3>ultimate plane</h3>
+          <div class="price"><span>$</span>1200</div>
+          <div class="list">
+            <p>interior design</p>
+            <p>refurbishment</p>
+            <p>material supply</p>
+            <p>maintenance</p>
+            <p>24/7 support</p>
+          </div>
+          <a href="#" class="btn">choose plan</a>
+        </div>
+      </div>
     </section>
-
-
-
-
-
     <!-- /PRICING SECTION -->
 
+    <!-- CONTACT SECTION -->
+    <section class="contact" id="contact">
+      <h1 class="heading">contact us</h1>
+
+      <div class="row">
+        <iframe class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97112.96974895698!2d71.65662115820312!3d40.48012509999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb77c1512b5cd3%3A0xdbff3671b64d48b7!2sMargilan%2C%20Uzbekistan!5e0!3m2!1sen!2s!4v1651932216300!5m2!1sen!2s"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+
+        <form action="">
+           <h3>get in touch</h3>
+           <input type="text" placeholder="name" class="box">
+           <input type="email" placeholder="email" class="box">
+           <input type="number" placeholder="phone" class="box">
+           <textarea name="" placeholder="message" class="box" id="" cols="30" rows="10"></textarea>
+           <input type="submit" value="send message" class="btn">
+        </form>
+      </div>
+    </section>
+    <!-- /CONTACT SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
