--- a/index.html
+++ b/index.html
@@ -575,7 +575,8 @@
       <h1 class="heading">contact us</h1>
 
       <div class="row">
-        <iframe class="map"
+        <iframe
+          class="map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97112.96974895698!2d71.65662115820312!3d40.48012509999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb77c1512b5cd3%3A0xdbff3671b64d48b7!2sMargilan%2C%20Uzbekistan!5e0!3m2!1sen!2s!4v1651932216300!5m2!1sen!2s"
           allowfullscreen=""
           loading="lazy"
@@ -583,16 +584,119 @@
         ></iframe>
 
         <form action="">
-           <h3>get in touch</h3>
-           <input type="text" placeholder="name" class="box">
-           <input type="email" placeholder="email" class="box">
-           <input type="number" placeholder="phone" class="box">
-           <textarea name="" placeholder="message" class="box" id="" cols="30" rows="10"></textarea>
-           <input type="submit" value="send message" class="btn">
+          <h3>get in touch</h3>
+          <input type="text" placeholder="name" class="box" />
+          <input type="email" placeholder="email" class="box" />
+          <input type="number" placeholder="phone" class="box" />
+          <textarea
+            name=""
+            placeholder="message"
+            class="box"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+          <input type="submit" value="send message" class="btn" />
         </form>
       </div>
     </section>
     <!-- /CONTACT SECTION -->
+
+    <!-- BLOGS SECTION -->
+
+    <section class="blogs" id="blogs">
+      <h1 class="heading">our blogs</h1>
+
+      <div class="swiper blog-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="./images/blog-1.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel,
+                consequuntur.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="./images/blog-2.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel,
+                consequuntur.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="./images/blog-3.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel,
+                consequuntur.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="./images/blog-4.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel,
+                consequuntur.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="./images/blog-5.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel,
+                consequuntur.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="./images/blog-6.jpg" alt="" />
+            </div>
+            <div class="content">
+              <h3>blog title goes here</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel,
+                consequuntur.
+              </p>
+              <a href="#" class="btn">read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- /BLOGS SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
