--- a/index.html
+++ b/index.html
@@ -701,19 +701,49 @@
     <!-- ClIENTS SECTION -->
 
     <section class="logo-container">
-      <div class=" swiper logo-slider">
+      <div class="swiper logo-slider">
         <div class="swiper-wrapper">
-          <div class="swiper-slide slide"><img src="./images/client-logo-1.png" alt=""></div>
-          <div class="swiper-slide slide"><img src="./images/client-logo-2.png" alt=""></div>
-          <div class="swiper-slide slide"><img src="./images/client-logo-3.png" alt=""></div>
-          <div class="swiper-slide slide"><img src="./images/client-logo-4.png" alt=""></div>
-          <div class="swiper-slide slide"><img src="./images/client-logo-5.png" alt=""></div>
-          <div class="swiper-slide slide"><img src="./images/client-logo-6.png" alt=""></div>
+          <div class="swiper-slide slide">
+            <img src="./images/client-logo-1.png" alt="" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="./images/client-logo-2.png" alt="" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="./images/client-logo-3.png" alt="" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="./images/client-logo-4.png" alt="" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="./images/client-logo-5.png" alt="" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="./images/client-logo-6.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
 
     <!-- /ClIENTS SECTION -->
+
+    <!-- FOOTER SECTION -->
+
+    <section class="footer">
+      <div class="links">
+        <a class="btn" href="#home">home</a>
+        <a class="btn" href="#about">about</a>
+        <a class="btn" href="#services">services</a>
+        <a class="btn" href="#projects">projects</a>
+        <a class="btn" href="#pricing">pricing</a>
+        <a class="btn" href="#contacts">contacts</a>
+        <a class="btn" href="#blogs">blogs</a>
+      </div>
+
+      <div class="credit">created by <span>Abdulxoliq_Odiljonov</span> | all rights reserved!</div>
+    </section>
+
+    <!-- /FOOTER SECTION -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
